--- a/openstack_dashboard/static/dashboard/less/horizon_charts.less
+++ b/openstack_dashboard/static/dashboard/less/horizon_charts.less
@@ -132,10 +132,9 @@
         margin: 0 4px 0 0;
     }
 }
-
 .legend_container {
+    position: relative;
     min-width: @min_width_fullscreen_chart_legend;
-    margin-left: 20px;
 
     .swatch {
         float: right;
