--- a/openstack_dashboard/static/dashboard/less/vs.less
+++ b/openstack_dashboard/static/dashboard/less/vs.less
@@ -38,12 +38,12 @@ div.detail {
 	line-height:2;
 }
 .chart_title_name_left{
+	width:500px;
 	margin-left:2%;
 	float:left;
 }
 .chart_title_name_right{
-	margin-right:49.5%;
-	float:right;
+	float:left;
 }
 .chart_title_name_clear{
 	clear:both;
