--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -23,13 +23,13 @@
 			</div>
 			<div class="span9 chart_container" style="width: 400px;">
 				<div class="chart"
+				   data-y_axis="{% trans 'CPU Usage(Units/' %}"
 	               data-chart-type="line_chart"
-	               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.cpu.usage&date_options=null&resource_id={{ instance }}"
+	               data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.cpu.usage&date_options=null&resource_id={{ instance }}"
 	               data-legend-selector="#legend1"
 	               data-smoother-selector="#smoother"
 	               data-display="true"
 	               data-meter="0"
-				   data-y_axis={% trans "CPU Usage(Units/" %}
 	               data-unit-conver="false"
 	               data-slider-selector="#slider">
 				</div>
@@ -41,13 +41,13 @@
 			</div>
 			<div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
 				<div class="chart"
+					 data-y_axis="{% trans 'Memory Usage(Units/' %}"
 		             data-chart-type="line_chart"
-		             data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.memory.usage&date_options=null&resource_id={{ instance }}"
+		             data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.memory.usage&date_options=null&resource_id={{ instance }}"
 		             data-legend-selector="#legend2"
 		             data-smoother-selector="#smoother"
 		             data-display="true"
 		             data-meter="1"
-					 data-y_axis={% trans "Memory Usage(Units/" %}
 		             data-unit-conver="false"
 		             data-slider-selector="#slider">
 		        </div>
@@ -73,12 +73,12 @@
 			</div>
 			<div class="span9 chart_container" style="width: 400px;">
 				<div class="chart"
+			       data-y_axis="{% trans 'Network Bandwidth(Units/' %}"
 	               data-chart-type="line_chart"
-	               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.incoming.bytes.rate-hardware.network.outgoing.bytes.rate&date_options=null&resource_id={{ instance }}"
+	               data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.network.incoming.bytes.rate-hardware.network.outgoing.bytes.rate&date_options=null&resource_id={{ instance }}"
 	               data-legend-selector="#legend3"
 	               data-display="true"
-	               data-meter="2"
-	               data-y_axis={% trans "Network Bandwidth(Units/" %}
+	               data-meter="2""
 	               data-unit-conver="true"
 	               data-unit="1024"
 	               data-smoother-selector="#smoother"
@@ -92,12 +92,12 @@
 			</div>
 			<div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
 				<div class="chart"
+					data-y_axis="{% trans 'Network Packege(Units/' %}"
 					data-chart-type="line_chart"
-					data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.incoming.packets.rate-hardware.network.outgoing.packets.rate&date_options=null&resource_id={{ instance }}"
+					data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.network.incoming.packets.rate-hardware.network.outgoing.packets.rate&date_options=null&resource_id={{ instance }}"
 					data-legend-selector="#legend4"
 					data-display="true"
 					data-meter="3"
-					data-y_axis={% trans "Network Packege(Units/" %}
 					data-unit-conver="true"
 					data-unit="1024"
 					data-smoother-selector="#smoother"
