Avoid the parameters 'interval_time' undefined

--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -78,9 +78,8 @@
 	               data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.network.incoming.bytes.rate-hardware.network.outgoing.bytes.rate&date_options=null&resource_id={{ instance }}"
 	               data-legend-selector="#legend3"
 	               data-display="true"
-	               data-meter="2""
+	               data-meter="2"
 	               data-unit-conver="true"
-	               data-unit="1024"
 	               data-smoother-selector="#smoother"
 	               data-slider-selector="#slider">
 				</div>
@@ -99,7 +98,6 @@
 					data-display="true"
 					data-meter="3"
 					data-unit-conver="true"
-					data-unit="1024"
 					data-smoother-selector="#smoother"
 					data-slider-selector="#slider">
 				</div>
