Delete uses less method

--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
@@ -17,7 +17,7 @@
                 <option title="{% trans "Memory Usage Rate" %}" legend="{% trans "Memory Usage(Units/" %}" value="hardware.memory.usage" data-unit="%">
                 	hardware.memory.usage
                 </option>
-                <option title="{% trans "Harware Disk Size Usage" %}" legend="{% trans "Harware Disk Size Usage(Units/" %}" value="hardware.disk.size.usage" data-unit="B">
+                <option title="{% trans "Harware Disk Size Usage" %}" legend="{% trans "Harware Disk Usage(Units/" %}" value="hardware.disk.size.usage" data-unit="B">
                 	hardware.disk.size.usage
                 </option>
                 <option title="{% trans "Network Outgoing Bytes Rate" %}" legend="{% trans "Network Outgoing Bytes Rate(Units/" %}" value="hardware.network.outgoing.bytes.rate" data-unit="B/s">
