--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
@@ -17,10 +17,10 @@
                  <option title="{% trans "Memory Usage Rate" %}" legend="{% trans "Memory Usage(Units/" %}" value="memory.usage" data-unit="%">
                  memory.usage
                  </option>
-                 <option title="{% trans "Harware Disk Size Usage" %}" legend="{% trans "Harware Disk Size Usage(Units/" %}" value="disk.root.size.used.percent" data-unit="B">
+                 <option title="{% trans "Harware Disk Size Usage" %}" legend="{% trans "VM Disk Usage(Units/" %}" value="disk.root.size.used.percent" data-unit="B">
                  disk.root.size.used.percent
                  </option>
-                 <option title="{% trans "Harware Disk Size Usage" %}" legend="{% trans "Harware Disk Size Usage(Units/" %}" value="disk.ephemeral.size.used.percent" data-unit="B/s">
+                 <option title="{% trans "Harware Disk Size Usage" %}" legend="{% trans "VM Disk Ephemeral Usage(Units/" %}" value="disk.ephemeral.size.used.percent" data-unit="B/s">
                  disk.ephemeral.size.used.percent
                  </option>
                  <option title="{% trans "Network Outgoing Bytes Rate" %}" legend="{% trans "Network Outgoing Bytes Rate(Units/" %}" value="network.outgoing.bytes.rate" data-unit="B/s">
