--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -3,7 +3,7 @@
 <div class="control-group">
 	<div class="controls">
 	{% trans "refresh cycle" %}:&nbsp;<select data-line-chart-command="select_box_change" onChange="horizon.d3_line_chart_ceilometer.switchTime();"
-            id="stats_attr" name="stats_attr" class="span2">
+            id="interval" name="interval" class="span2">
 		<option selected="selected" value="60000">{% trans "1 min" %}</option>
 		<option value="30000">{% trans "30 sec" %}</option>
 		<option value="300000">{% trans "5 min" %}</option>
