--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
@@ -40,14 +40,14 @@
     <div class="controls">
       <select data-line-chart-command="select_box_change"
               id="period" name="period" class="span2">
-        <option value="60000" selected="selected">{% trans "1 min" %}</option>
-        <option value="300000">{% trans "5 min" %}</option>
-        <option value="600000">{% trans "10 min" %}</option>
-        <option value="1800000">{% trans "30 min" %}</option>
-        <option value="3600000">{% trans "1 hour" %}</option>
-        <option value="86400000">{% trans "1 day" %}</option>
-        <option value="604800000">{% trans "1 week" %}</option>
-        <option value="2073600000">{% trans "1 month" %}</option>
+        <option value="60" selected="selected">{% trans "1 min" %}</option>
+        <option value="300">{% trans "5 min" %}</option>
+        <option value="600">{% trans "10 min" %}</option>
+        <option value="1800">{% trans "30 min" %}</option>
+        <option value="3600">{% trans "1 hour" %}</option>
+        <option value="86400">{% trans "1 day" %}</option>
+        <option value="604800">{% trans "1 week" %}</option>
+        <option value="2073600">{% trans "1 month" %}</option>
       </select>
     </div>
   </div>
