--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -43,7 +43,7 @@
 	        	<div class="chart"
 			        data-y_axis="{% trans 'Memory Usage(Units/' %}"
 	        		data-chart-type="line_chart"
-	        		data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=memory.usage&date_options=null&resource_id={{ instance.id }}"
+	        		data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=memory.usage.rate&date_options=null&resource_id={{ instance.id }}"
 	        		data-legend-selector="#legend2"
 	        		data-smoother-selector="#smoother"
 	        		data-display="true"
