restructure the code if d3linechart_ceilometer.js, solve the problem of the chart data error in diffent tabs, format the time from rickshaw.sj to d3linechart_ceilometer.js
ref:issue:#369

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load url from future %}
- 
+  
 <div id="samples_url" url="{% url "horizon:admin:metering:samples" %}"></div>
 <div id="ceilometer-stats">
   <form class="form-horizontal"
@@ -20,8 +20,7 @@
               {% endfor %}
             </optgroup>
         </select>          
-      </div>
-      
+      </div>      
     </div>
 
   <div class="control-group">
@@ -93,34 +92,32 @@
   <div class="span12">
     <h4>{% trans "Statistics of all resources" %}</h4>
     <hr class="header_rule" />
-    <div class="info row-fluid detail">
-      <div class="span9 chart_container"  style="width: 400px; height: 350px">
-          <div id= "chart_usage"
-               class="chart"
+    <div id="chart_usage" class="info row-fluid detail">
+      <div class="span9 chart_container"  style="width: 400px;">
+          <div class="chart"              
                data-chart-type="line_chart"
                data-url="{% url 'horizon:admin:metering:samples'%}"
                data-form-selector='#linechart_usage_form'
                data-legend-selector="#legend_usage"
                data-smoother-selector="#smoother_usage" 
                data-display="true"
-               data-meter="0"
+               data-meter="4"
                data-unit-conver="true"
                data-slider-selector="#slider_usage">
           </div>
           <div id="slider_usage"></div>
-        </div>
+      </div>
         <div class="span3 legend_container">
           <div id="smoother_usage" title="Smoothing"></div>
           <div id="legend_usage"></div>
         </div>
-      </div>
     </div>
   </div>
 </div>
 
 <script type="text/javascript">
-  if (typeof horizon.d3_line_chart !== 'undefined') {
-    horizon.d3_line_chart_ceilometer.init("div[id='chart_usage']",
+  if (typeof horizon.d3_line_chart_ceilometer !== 'undefined') {
+    horizon.d3_line_chart_ceilometer.init("div[data-chart-type='line_chart']",
       {'auto_resize': true}, false);
   }
 
@@ -138,7 +135,7 @@
         // want to refresh, but show hide the date fields
         if ($(this).find("option:selected").val() == "other"){
           evt.stopPropagation();
-          $("#usage_date_from .controls input, #date_to .controls input").val('');
+          $("#usage_date_from .controls input, #usage_date_to .controls input").val('');
           $("#usage_date_from, #usage_date_to").show();
         } else {
           $("#usage_date_from, #usage_date_to").hide();
