--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -3,7 +3,7 @@
 <div class="control-group">
 	<div class="controls">
 		{% trans "refresh cycle" %}:&nbsp;<select data-line-chart-command="select_box_change" onChange="horizon.d3_line_chart_ceilometer.switchTime();"
-            id="stats_attr" name="stats_attr" class="span2">
+            id="refresh_cycle" name="refresh_cycle" class="span2">
 		<option value="30000">{% trans "30 sec" %}</option>
 		<option selected="selected" value="60000">{% trans "1 min" %}</option>
 		<option value="300000">{% trans "5 min" %}</option>
@@ -25,12 +25,11 @@
 				<div class="chart"
 					data-chart-type="line_chart"
 					data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=cpu_util&date_options=null&resource_id={{ instance.id }}"
-					data-form-selector='#linechart_general_form'
 					data-legend-selector="#legend1"
 					data-smoother-selector="#smoother"
 					data-display="true"
 					data-meter="0"
-			        data-y_axis={% trans "CPU Usage(Units/" %}
+			    data-y_axis={% trans "CPU Usage(Units/" %}
 					data-unit-conver="false"
 					data-slider-selector="#slider">
 				</div>
@@ -44,7 +43,6 @@
 	        	<div class="chart"
 	        		data-chart-type="line_chart"
 	        		data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=memory.usage&date_options=null&resource_id={{ instance.id }}"
-	        		data-form-selector='#linechart_general_form'
 	        		data-legend-selector="#legend2"
 	        		data-smoother-selector="#smoother"
 	        		data-display="true"
@@ -75,7 +73,6 @@
 				<div class="chart"
 					data-chart-type="line_chart"
 					data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.bytes.rate-network.outgoing.bytes.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
-					data-form-selector='#linechart_general_form'
 					data-legend-selector="#legend3"
 					data-display="true"
 					data-meter="2"
@@ -94,8 +91,7 @@
 		        <div class="chart"
 		        	data-chart-type="line_chart"
 		        	data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.packets.rate-network.outgoing.packets.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
-		        	data-form-selector='#linechart_general_form'
-		        	data-legend-selector="#legend"
+		        	data-legend-selector="#legend4"
 		        	data-display="true"
 		        	data-meter="3"
 		        	data-y_axis={% trans "Network Packege(Units/" %}
@@ -113,7 +109,7 @@
 	</div>
 </div>
 <script type="text/javascript">
-  if (typeof horizon.d3_line_chart !== 'undefined') {
+  if (typeof horizon.d3_line_chart_ceilometer !== 'undefined') {
     horizon.d3_line_chart_ceilometer.init("div[data-chart-type='line_chart']",
       {'auto_resize': true}, true);
   }
