format chart date to locale; change the tab, stop auto refresh;

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -15,37 +15,50 @@
 </div>
 <div class="info row-fluid detail">
 	<div class="span12">
-		<h4 class="meter_image" id="cpu_title_image"><span style="line-height:2.5">{% trans "cpu" %} / {% trans "memory" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showCPU();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+		<h4 class="meter_image" id="cpu_title_image">
+			<span style="line-height:2.5">
+				{% trans "cpu" %} / {% trans "memory" %}
+			</span>
+			<span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showCPU();">
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</span>
+		</h4>
 		<hr class="header_rule" />
 		<div id="cpu_cup_util" class="info row-fluid detail">
-			<div class="chart_title_name">
-				<div class="chart_title_name_left">{% trans "VM CPU Usage Rate" %}</div>
-				<div class="chart_title_name_right">{% trans "VM Memory Usage Rate" %}</div>
-				<div class="chart_title_name_clear"/></div>
-			</div>
-			<div class="span9 chart_container" style="width: 400px;">
-				<div class="chart"
-			        data-y_axis="{% trans 'CPU Usage(Units/' %}"
-					data-chart-type="line_chart"
-					data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=cpu_util&date_options=null&resource_id={{ instance.id }}"
-					data-legend-selector="#legend1"
-					data-smoother-selector="#smoother"
-					data-display="true"
-					data-meter="0"
-					data-unit-conver="false"
-					data-slider-selector="#slider">
+				<div class="chart_title_name">
+					<div class="chart_title_name_left">
+						{% trans "VM CPU Usage Rate" %}
+					</div>
+					<div class="chart_title_name_right">
+						{% trans "VM Memory Usage Rate" %}
+					</div>
+					<div class="chart_title_name_clear"/>
 				</div>
-				<div class="span3" style="position: relative;width: 400px;">
-					<div id="smoother" title="Smoothing"></div>
-					<div id="legend1"></div>
-				</div>
-				<div id="slider"></div>
-	        </div>
-	        <div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
-	        	<div class="chart"
+				<div class="span9 chart_container" style="width: 400px;">
+					<div id="cpu_util_chart" 
+					    class="chart"
+				      data-y_axis="{% trans 'CPU Usage(Units/' %}"
+							data-chart-type="line_chart"
+							data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=cpu_util&date_options=null&resource_id={{ instance.id }}"
+							data-legend-selector="#legend1"
+							data-smoother-selector="#smoother"
+							data-display="true"
+							data-meter="0"
+							data-unit-conver="false"
+							data-slider-selector="#slider">
+					</div>
+					<div class="span3" style="position: relative;width: 400px;">
+						<div id="smoother" title="Smoothing"></div>
+						<div id="legend1"></div>
+					</div>
+					<div id="slider"></div>
+	      </div>
+	      <div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
+	        	<div id="memery_usage_percent_chart"
+	        	  class="chart"
 			        data-y_axis="{% trans 'Memory Usage(Units/' %}"
 	        		data-chart-type="line_chart"
-	        		data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=memory.usage.rate&date_options=null&resource_id={{ instance.id }}"
+	        		data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=memory.usage.percent&date_options=null&resource_id={{ instance.id }}"
 	        		data-legend-selector="#legend2"
 	        		data-smoother-selector="#smoother"
 	        		data-display="true"
@@ -57,25 +70,36 @@
 	        		<div id="smoother" title="Smoothing"></div>
 	        		<div id="legend2"></div>
 	        	</div>
-	        </div>
+	      </div>
 		</div>
 	</div>
 </div>
 <div class="info row-fluid detail">
 	<div class="span12">
-		<h4 class="meter_image" id="network_bytes_image"><span style="line-height:2.5">{% trans "network" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showNetworkBytes();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+		<h4 class="meter_image" id="network_bytes_image">
+			<span style="line-height:2.5">
+				{% trans "network" %}
+			</span>
+			<span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showNetworkBytes();">
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</span>
+		</h4>
 		<hr class="header_rule" />
 		<div id="network_bytes" class="info row-fluid detail">
 			<div class="chart_title_name">
-				<div class="chart_title_name_left">{% trans "VM Network Outgong and Ingong Bytes" %}</div>
-				<div class="chart_title_name_right">{% trans "VM Network Outgong and Ingong Packets" %}</div>
-				<div class="chart_title_name_clear"/></div>
+				<div class="chart_title_name_left">
+					{% trans "VM Network Outgong and Ingong Bytes" %}
+				</div>
+				<div class="chart_title_name_right">
+					{% trans "VM Network Outgong and Ingong Packets" %}
+				</div>
+				<div class="chart_title_name_clear"/>
 			</div>
 			<div class="span9 chart_container" style="width: 400px;">
-				<div class="chart"
+				<div id="net_bytes_chart" class="chart"
 					data-y_axis="{% trans 'Network Bandwidth(Units/' %}"
 					data-chart-type="line_chart"
-					data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=network.incoming.bytes.rate-network.outgoing.bytes.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
+					data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.bytes.rate-network.outgoing.bytes.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
 					data-legend-selector="#legend3"
 					data-display="true"
 					data-meter="2"
@@ -88,12 +112,13 @@
 					<div id="legend3"></div>
 				</div>
 			</div>
-	        <div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
-		        <div class="chart"
+	    <div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
+		        <div id="net_packets_chart"
+		          class="chart"
 		        	data-y_axis="{% trans 'Network Packege(Units/' %}"
 		        	data-chart-type="line_chart"
-		        	data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=network.incoming.packets.rate-network.outgoing.packets.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
-		        	data-legend-selector="#legend"
+		        	data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.packets.rate-network.outgoing.packets.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
+		        	data-legend-selector="#legend4"
 		        	data-display="true"
 		        	data-meter="3"
 		        	data-unit-conver="true"
@@ -104,8 +129,8 @@
 		        	<div id="smoother" title="Smoothing"></div>
 		        	<div id="legend4"></div>
 		        </div>
-		    </div>
-	    </div>
+		   </div>
+		</div>
 	</div>
 </div>
 <script type="text/javascript">
