Modify the monitor
  Modify 1:'refresh_cycle' sorting, 2:uninterrupted refresh, 3:query url.

  Ref:#444

--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -3,9 +3,9 @@
 <div class="control-group">
 	<div class="controls">
 	{% trans "refresh cycle" %}:&nbsp;<select data-line-chart-command="select_box_change" onChange="horizon.d3_line_chart_ceilometer.switchTime();"
-            id="interval" name="interval" class="span2">
-		<option selected="selected" value="60000">{% trans "1 min" %}</option>
+		id="refresh_cycle" name="refresh_cycle" class="span2">
 		<option value="30000">{% trans "30 sec" %}</option>
+		<option selected="selected" value="60000">{% trans "1 min" %}</option>
 		<option value="300000">{% trans "5 min" %}</option>
 		<option value="600000">{% trans "10 min" %}</option>
 	</select>
@@ -22,7 +22,8 @@
 				<div class="chart_title_name_clear"/></div>
 			</div>
 			<div class="span9 chart_container" style="width: 400px;">
-				<div class="chart"
+				<div id="cpu_util_chart"
+                   class="chart"
 				   data-y_axis="{% trans 'CPU Usage(Units/' %}"
 	               data-chart-type="line_chart"
 	               data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.cpu.usage&date_options=null&resource_id={{ instance }}"
@@ -40,7 +41,8 @@
 				<div id="slider"></div>
 			</div>
 			<div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
-				<div class="chart"
+				<div id="memery_usage_percent_chart"
+					 class="chart"
 					 data-y_axis="{% trans 'Memory Usage(Units/' %}"
 		             data-chart-type="line_chart"
 		             data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.memory.usage&date_options=null&resource_id={{ instance }}"
@@ -72,10 +74,11 @@
 				<div class="chart_title_name_clear"/></div>
 			</div>
 			<div class="span9 chart_container" style="width: 400px;">
-				<div class="chart"
+				<div id="net_bytes_chart" 
+				   class="chart"
 			       data-y_axis="{% trans 'Network Bandwidth(Units/' %}"
 	               data-chart-type="line_chart"
-	               data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.network.incoming.bytes.rate-hardware.network.outgoing.bytes.rate&date_options=null&resource_id={{ instance }}"
+	               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.incoming.bytes.rate-hardware.network.outgoing.bytes.rate&period=60&stats_attr=sum&date_options=null&resource_id={{ instance }}"
 	               data-legend-selector="#legend3"
 	               data-display="true"
 	               data-meter="2"
@@ -90,10 +93,11 @@
 				<div id="slider"></div>
 			</div>
 			<div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
-				<div class="chart"
+				<div id="net_packets_chart"
+					class="chart"
 					data-y_axis="{% trans 'Network Packege(Units/' %}"
 					data-chart-type="line_chart"
-					data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.network.incoming.packets.rate-hardware.network.outgoing.packets.rate&date_options=null&resource_id={{ instance }}"
+					data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.incoming.packets.rate-hardware.network.outgoing.packets.rate&period=60&stats_attr=sum&date_options=null&resource_id={{ instance }}"
 					data-legend-selector="#legend4"
 					data-display="true"
 					data-meter="3"
