--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -24,7 +24,7 @@
 			<div class="span9 chart_container" style="width: 400px;">
 				<div id="cpu_util_chart"
                    class="chart"
-				   data-y_axis="{% trans 'CPU Usage(Units/' %}"
+				   data-y_axis="{% trans 'CPU Usage(Units:' %}"
 	               data-chart-type="line_chart"
 	               data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.cpu.usage&date_options=null&resource_id={{ instance }}"
 	               data-legend-selector="#legend1"
@@ -43,7 +43,7 @@
 			<div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
 				<div id="memery_usage_percent_chart"
 					 class="chart"
-					 data-y_axis="{% trans 'Memory Usage(Units/' %}"
+					 data-y_axis="{% trans 'Memory Usage(Units:' %}"
 		             data-chart-type="line_chart"
 		             data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=hardware.memory.usage&date_options=null&resource_id={{ instance }}"
 		             data-legend-selector="#legend2"
@@ -69,14 +69,14 @@
 		<hr class="header_rule" />
 		<div id="network_bytes" class="info row-fluid detail">
 			<div class="chart_title_name">
-				<div class="chart_title_name_left">{% trans "Network Incoming and Outgoing Bytes" %}</div>
-				<div class="chart_title_name_right">{% trans "Network Outgong and Ingong Packets" %}</div>
+				<div class="chart_title_name_left">{% trans "Network Incoming and Outgoing Bytes Rate" %}</div>
+				<div class="chart_title_name_right">{% trans "Network Outgong and Ingong Packets Rate" %}</div>
 				<div class="chart_title_name_clear"/></div>
 			</div>
 			<div class="span9 chart_container" style="width: 400px;">
 				<div id="net_bytes_chart" 
 				   class="chart"
-			       data-y_axis="{% trans 'Network Bandwidth(Units/' %}"
+			       data-y_axis="{% trans 'Network Bandwidth(Units:' %}"
 	               data-chart-type="line_chart"
 	               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.incoming.bytes.rate-hardware.network.outgoing.bytes.rate&period=60&stats_attr=sum&date_options=null&resource_id={{ instance }}"
 	               data-legend-selector="#legend3"
@@ -95,7 +95,7 @@
 			<div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
 				<div id="net_packets_chart"
 					class="chart"
-					data-y_axis="{% trans 'Network Packege(Units/' %}"
+					data-y_axis="{% trans 'Network Packege(Units:' %}"
 					data-chart-type="line_chart"
 					data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.incoming.packets.rate-hardware.network.outgoing.packets.rate&period=60&stats_attr=sum&date_options=null&resource_id={{ instance }}"
 					data-legend-selector="#legend4"
