--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -37,7 +37,7 @@
 				<div class="span9 chart_container" style="width: 400px;">
 					<div id="cpu_util_chart" 
 					    class="chart"
-				      data-y_axis="{% trans 'CPU Usage(Units/' %}"
+				      data-y_axis="{% trans 'CPU Usage(Units:' %}"
 							data-chart-type="line_chart"
 							data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=cpu_util&date_options=null&resource_id={{ instance.id }}"
 							data-legend-selector="#legend1"
@@ -56,7 +56,7 @@
 	      <div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
 	        	<div id="memery_usage_percent_chart"
 	        	  class="chart"
-			        data-y_axis="{% trans 'Memory Usage(Units/' %}"
+			        data-y_axis="{% trans 'Memory Usage(Units:' %}"
 	        		data-chart-type="line_chart"
 	        		data-url="{% url 'horizon:admin:metering:raw-samples'%}?meter=memory.usage.percent&date_options=null&resource_id={{ instance.id }}"
 	        		data-legend-selector="#legend2"
@@ -88,16 +88,16 @@
 		<div id="network_bytes" class="info row-fluid detail">
 			<div class="chart_title_name">
 				<div class="chart_title_name_left">
-					{% trans "VM Network Outgong and Ingong Bytes" %}
+					{% trans "VM Network Outgong and Ingong Bytes Rate" %}
 				</div>
 				<div class="chart_title_name_right">
-					{% trans "VM Network Outgong and Ingong Packets" %}
+					{% trans "VM Network Outgong and Ingong Packets Rate" %}
 				</div>
 				<div class="chart_title_name_clear"/>
 			</div>
 			<div class="span9 chart_container" style="width: 400px;">
 				<div id="net_bytes_chart" class="chart"
-					data-y_axis="{% trans 'Network Bandwidth(Units/' %}"
+					data-y_axis="{% trans 'Network Bandwidth(Units:' %}"
 					data-chart-type="line_chart"
 					data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.bytes.rate-network.outgoing.bytes.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
 					data-legend-selector="#legend3"
@@ -115,7 +115,7 @@
 	    <div class="span9 chart_container" style="width: 400px;margin-left: 100px;">
 		        <div id="net_packets_chart"
 		          class="chart"
-		        	data-y_axis="{% trans 'Network Packege(Units/' %}"
+		        	data-y_axis="{% trans 'Network Packege(Units:' %}"
 		        	data-chart-type="line_chart"
 		        	data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.packets.rate-network.outgoing.packets.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
 		        	data-legend-selector="#legend4"
