Localization the "Download CSV Report' button
  Ref:#445

--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
@@ -102,7 +102,7 @@
       <h4 style="float:left;">
         {% trans "Statistics of all resources" %}
       </h4>
-        <a style="float:right" href="javascript:void(0);" onClick="csv();" title="Download CSV Summary" 
+        <a style="float:right" href="javascript:void(0);" onClick="csv();" title="{% trans 'Download CSV Report' %}" 
               class="btn btn-small btn-download" id="project_usage__action_csv_summary">{% trans "Download CSV Report" %}</a>
     </div>
     <div>
